create func: generateToken.js, edit: user-ctrl, user-model, swagger/user-endpoints
