# swagger.json
@@ -5,7 +5,10 @@
     "title": "GooseTrack",
     "description": "This is a sample documentation for the GooseTrack application based on OpenApi 3.0.1. This documentation provides access to the core functionalities of our service. The API enables you to retrieve and send data, manage resources, and interact with the application. We continuously work on improving it, updating, and expanding its functionality. Please review our documentation to learn how to get started with our API and seamlessly integrate it into your projects."
   },
-  "servers": [{ "url": "https://final-project-backend-6uyr.onrender.com/api" }, { "url": "http://localhost:4000/api" }],
+  "servers": [
+    { "url": "https://final-project-backend-6uyr.onrender.com/api" },
+    { "url": "http://localhost:4000/api" }
+  ],
   "tags": [
     { "name": "Auth", "description": "Authorization endpoints" },
     { "name": "Tasks", "description": "Tasks endpoints" },
@@ -607,15 +610,9 @@
       "RegistrationResponse": {
         "type": "object",
         "properties": {
-          "username": {
+          "token": {
             "type": "string",
-            "description": "User's name"
-          },
-          "email": {
-            "type": "string",
-            "description": "User's email",
-            "format": "email",
-            "pattern": "^[\\w-\\.]+@([\\w-]+\\.)+[\\w-]{2,4}$"
+            "example": "token"
           }
         }
       },
@@ -698,6 +695,11 @@
           "birthday": {
             "type": "string",
             "description": "User's birthday"
+          },
+          "theme": {
+            "type": "string",
+            "description": "User's UI theme",
+            "enum": ["dark", "light"]
           }
         }
       },
@@ -731,6 +733,11 @@
           "birthday": {
             "type": "string",
             "description": "User's birthday"
+          },
+          "theme": {
+            "type": "string",
+            "description": "User's UI theme",
+            "enum": ["dark", "light"]
           }
         }
       },
@@ -765,6 +772,11 @@
             "type": "string",
             "description": "User's UI theme",
             "enum": ["dark", "light"]
+          },
+          "avatarURL": {
+            "type": "string",
+            "description": "Avatar link",
+            "example": "http://avatar_link.com"
           }
         }
       },
